<resources>
    <string name="app_name">Online diet coach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Rate US</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome To Online Diet Coach</string>
    <string name="create_account"> Create Account</string>
    <string name="new_user">New User? </string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_phone_no">Enter your Phone No</string>
    <string name="SignUp">signUp</string>
</resources>
