<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        android:layout_height="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:gravity="center"
            android:layout_height="350dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phin"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:colorControlActivated="@color/colorPrimary"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/HintText"
                app:counterTextAppearance="@style/CounterText"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/enter_your_phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_phone"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="2dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:digits="0123456789"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/HintText"
                app:passwordToggleTint="@color/colorPrimary"
                app:counterTextAppearance="@style/CounterText"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/enter_your_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="2dp"
                    android:singleLine="true"
                    android:textColor="@color/green_text"
                    android:textStyle="bold"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/remembar_me"
                    android:layout_width="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:background="@drawable/gradientbtn"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/login"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/new_user"
                    android:gravity="end"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_new_user"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/create_account"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>